vcl/inc/iconview.hxx
@@ -26,6 +26,7 @@
 class IconView final : public SvTreeListBox
 {
 private:
+    short m_nFixedColumnCount = -1;
     short m_nColumnCount;
 
 public:
@@ -33,7 +34,9 @@ public:
 
     Size GetEntrySize(const SvTreeListEntry&) const;
     short GetColumnCount() const { return m_nColumnCount; }
+    void SetFixedColumnCount(short nColumnCount);
 
+    virtual Size GetOptimalSize() const override;
     virtual void Resize() override;
 
     virtual tools::Rectangle GetFocusRect(const SvTreeListEntry*, tools::Long) override;
@@ -64,6 +67,8 @@ protected:
 private:
     Link<const encoded_image_query&, bool> maDumpImageHdl;
     void DumpEntryAndSiblings(tools::JsonWriter& rJsonWriter, SvTreeListEntry* pEntry);
+
+    bool HasSeparatorEntry() const;
 };
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
